@@ -91,6 +91,8 @@ BUGFIXES:
 
   ZOOKEEPER-2171 avoid reverse lookups in QuorumCnxManager (rgs via michim)
 
+  ZOOKEEPER-2182 Several test suites are not running during pre-commit, because their names do not end with "Test". (Chris Nauroth via hdeng)
+
 IMPROVEMENTS:
   ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)
 
